--- a/frontend/src/components/user/molecules/VisaInfo/VisaInfo.scss
+++ b/frontend/src/components/user/molecules/VisaInfo/VisaInfo.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   gap: 8px;
   position: relative;
+  margin-bottom: 40px;
 
   .visa-info-text {
     width: fit-content;
@@ -12,6 +13,7 @@
     flex-direction: column;
     justify-content: space-between;
     gap: 28px;
+    width: 100%;
 
     .dropdown-container {
       height: 48px;
@@ -57,6 +59,12 @@
 
 @media screen and ($tabletMedium) {
   .visa-info-container {
+    margin-bottom: 0;
+
+    .visa-info-text {
+      max-width: 360px;
+    }
+
     img {
       width: 176px;
       height: 176px;
@@ -86,6 +94,7 @@
       height: 100%;
       padding: 48px 0;
       gap: 24px;
+      max-width: none;
 
       h2 {
         max-width: none;
